Thu Mar 14 07:06:59 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* options.h.in: Adjust comment to reflect kfogel change.

Thu Mar 14 01:38:30 1996  Karl Fogel  <kfogel@floss.red-bean.com>

        * options.h.in (AUTH_CLIENT_SUPPORT): turn on by default.

Wed Mar 13 09:25:56 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* vers_ts.c (Version_TS): Don't try to override options from rcs
	file if there isn't an rcs file (e.g. called from send_fileproc).
	This fixes a bug detected by test 59 in "make remotecheck".

	* rcs.c (RCS_reparsercsfile, RCS_getexpand): Assert that argument
	is not NULL.

	Fix a gcc -Wall warning:
	* rcs.c, rcs.h (RCS_getexpand): New function.
	* vers_ts.c (Version_TS): Call it.
	* rcs.c (RCS_reparsercsfile): Make static.

	Add a "cvs init" command.  This is needed because cvsinit.sh
	invoked mkmodules which doesn't exist any more.
	* mkmodules.c: Break filelist out of mkmodules function, rename
	struct _checkout_file to struct admin_file (for namespace
	correctness), and add contents field.
	(init,mkdir_if_needed): New functions.
	* cvs.h (init): Declare.
	* main.c (cmds): Add init.
	(main): If command is init, don't require cvsroot to exist.
	* client.c, client.h (client_init, send_init_command): New functions.
	* client.c (start_server): Don't send Root request if command is init.
	* server.c (serve_init): New function.
	(requests): Add "init".

Wed Mar 13 09:51:03 MET 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* vers_ts.c (Version_TS): set options to default option if the
	  file if no -k option but -A was given.  This avoids the (wrong)
	  update message for binary files which are up-to-date when
	  running 'cvs -A'.

	* update.c (checkout_file): remove test of -k option stored in the
	  file itself because it was moved to vers_ts.c

	* sanity.sh: added tests for the above fix.

Tue Mar 12 13:47:09 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* hash.c (findnode): Adjust comment regarding errors.
